<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/top_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout android:id="@+id/welcome_image"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/welcome_image"
        />
    
    <TextView
        android:id="@+id/potlatch_def"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/potlatch_def"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/white"
        android:textStyle="italic"
        android:scrollHorizontally="true"
        android:singleLine="true" 
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="marquee_forever"
        android:focusable="true"
        android:focusableInTouchMode="true"/>

        <ImageButton
            android:id="@+id/fabbutton"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="@dimen/fab_size"
            android:layout_height="@dimen/fab_size"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/fab_margin"
            android:layout_marginEnd="@dimen/fab_margin"
            android:background="@drawable/fab_signup_ripple"
            android:contentDescription="@string/signup_info_fab"
            android:elevation="3dp"
            android:src="@drawable/fab_add" />

    <TextView
        android:id="@+id/setup_account_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@id/fabbutton"
        android:layout_alignTop="@id/fabbutton"
        android:layout_margin="16dp"
        android:text="@string/setup_btn"
        android:textColor="@android:color/white"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/not_online"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/not_online_gifts_msg"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:visibility="gone" />

</RelativeLayout>